@@ -8,6 +8,7 @@
 
 **********************************************************************/
 
+#include "ruby/config.h"
 #include "addr2line.h"
 
 #include <stdio.h>
@@ -24,12 +25,15 @@
 #include <limits.h>
 #include <stdio.h>
 #include <stdlib.h>
-#include <alloca.h>
 #include <string.h>
 #include <sys/mman.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <unistd.h>
+
+#if defined(HAVE_ALLOCA_H)
+#include <alloca.h>
+#endif
 
 #ifdef HAVE_DL_ITERATE_PHDR
 # ifndef _GNU_SOURCE
